[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cone.tokens"
version = "1.1.0.dev0"
description = "cone token api"
readme = "README.rst"
license = {text = "MIT"}
authors = [{name = "Cone Contributors", email = "dev@conestack.org"}]
keywords = ["node", "pyramid", "cone", "web"]
classifiers = [
    "Environment :: Web Environment",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dependencies = [
    "cone.sql",
    "python-dateutil",
    "qrcode[pil]",
]

[project.optional-dependencies]
test = [
    "cone.app[test]",
    "pytest",
    "yafowil.widget.datetime",
    "zope.pytestlayer",
]

[project.urls]
Homepage = "http://github.com/conestack/cone.tokens"

[tool.hatch.build.targets.wheel]
packages = ["src/cone"]

[tool.pytest.ini_options]
consider_namespace_packages = true
addopts = ["--import-mode=importlib"]
pythonpath = "src"

[tool.zest-releaser]
create-wheel = true
